--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT" }
 authors = [{ name = "GBDO" }]
-dependencies = []
+dependencies = [
+  "youtube-transcript-api>=0.6.2,<1.0"
+]
 
 [project.scripts]
 eyt-headline = "economic_youtube_headline_skill.cli:app"
