--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ EYT_HEADLINE_MIN_TRANSCRIPT_CHARS=700
 EYT_HEADLINE_MAX_HEADLINES=5
 EYT_HEADLINE_ALLOW_PARTIAL=true
 EYT_HEADLINE_TRANSCRIPT_LANGUAGES=ko,en
+EYT_HEADLINE_TARGET_CHANNELS=
+EYT_HEADLINE_CHANNEL_VIDEO_LIMIT=5
 EYT_HEADLINE_MOCK_TRANSCRIPT_TEXT=
