--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ EYT_HEADLINE_ALLOW_PARTIAL=true
 EYT_HEADLINE_TRANSCRIPT_LANGUAGES=ko,en
 EYT_HEADLINE_TARGET_CHANNELS=
 EYT_HEADLINE_CHANNEL_VIDEO_LIMIT=5
+EYT_HEADLINE_LOG_DIR=logs
+EYT_HEADLINE_SESSION_ID=
 EYT_HEADLINE_MOCK_TRANSCRIPT_TEXT=
