Add proxy + pacing controls for transcript fetches

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,13 @@ EYT_HEADLINE_MAX_HEADLINES=5
 EYT_HEADLINE_ALLOW_PARTIAL=true
 EYT_HEADLINE_INSECURE_SSL_FALLBACK=true
 EYT_HEADLINE_TRANSCRIPT_LANGUAGES=ko,en
+EYT_HEADLINE_PROXY_HTTP_URL=
+EYT_HEADLINE_PROXY_HTTPS_URL=
+EYT_HEADLINE_WEBSHARE_PROXY_USERNAME=
+EYT_HEADLINE_WEBSHARE_PROXY_PASSWORD=
+EYT_HEADLINE_WEBSHARE_PROXY_LOCATIONS=
+EYT_HEADLINE_WEBSHARE_RETRIES_WHEN_BLOCKED=10
+EYT_HEADLINE_TRANSCRIPT_REQUEST_DELAY_MS=0
 EYT_HEADLINE_TARGET_CHANNELS=
 EYT_HEADLINE_CHANNEL_VIDEO_LIMIT=5
 EYT_HEADLINE_LOG_DIR=logs
